# bpp/backend/api/handlers/job-application.go
@@ -1,0 +1,37 @@
+package handlers
+
+import (
+	"encoding/json"
+	"net/http"
+
+	jobApplication "github.com/ONEST-Network/Whatsapp-Chatbot/bpp/backend/internal/job-application"
+	"github.com/ONEST-Network/Whatsapp-Chatbot/bpp/backend/pkg/clients"
+	jobapplication "github.com/ONEST-Network/Whatsapp-Chatbot/bpp/backend/pkg/types/payload/job-application"
+	"github.com/gin-gonic/gin"
+)
+
+// @Summary	Update job application status
+// @Description	Update a job application's status
+// @Accept		json
+// @Produce		json
+// @Param id path string true "Job Application ID"
+// @Param request body jobapplication.UpdateJobApplicationStatusRequest true "request body"
+// @Success 200
+// @Failure 500 {object} string
+// @Router	/job-application/{id}/status	[post]
+func UpdateJobApplicationStatus(clients *clients.Clients) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		applicationId := c.Param("id")
+
+		var payload jobapplication.UpdateJobApplicationStatusRequest
+		if err := json.NewDecoder(c.Request.Body).Decode(&payload); err != nil {
+			c.JSON(http.StatusBadRequest, err.Error())
+			return
+		}
+
+		if err := jobApplication.NewJobApplication(clients).UpdateJobApplicationStatus(applicationId, &payload); err != nil {
+			c.AbortWithStatusJSON(http.StatusInternalServerError, err.Error())
+			return
+		}
+	}
+}
