# bpp/backend/docs/swagger.yaml
@@ -1,4 +1,46 @@
 definitions:
+  github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.ApplicantDetails:
+    properties:
+      age:
+        type: integer
+      documents:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Documents'
+      email:
+        type: string
+      experience:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Experience'
+      gender:
+        type: string
+      name:
+        type: string
+      phone:
+        type: string
+    type: object
+  github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document:
+    properties:
+      type:
+        type: string
+      url:
+        type: string
+    type: object
+  github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Documents:
+    properties:
+      aadharCard:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document'
+      drivingLicense:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document'
+      panCard:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document'
+      passport:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document'
+      resume:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document'
+    type: object
+  github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Experience:
+    properties:
+      years:
+        type: integer
+    type: object
   github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_types_payload_onest_cancel_request.City:
     properties:
       code:
@@ -1839,10 +1881,6 @@ definitions:
     type: object
   job.CreateJobRequest:
     properties:
-      applicationIds:
-        items:
-          type: string
-        type: array
       businessId:
         type: string
       description:
@@ -1911,6 +1949,15 @@ definitions:
     - GenderAny
     - GenderMale
     - GenderFemale
+  job.GetJobApplicationsResponse:
+    properties:
+      applicantDetails:
+        $ref: '#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.ApplicantDetails'
+      id:
+        type: string
+      status:
+        $ref: '#/definitions/jobapplication.JobApplicationStatus'
+    type: object
   job.JobType:
     enum:
     - full-time
@@ -1960,6 +2007,31 @@ definitions:
       end:
         type: string
       start:
+        type: string
+    type: object
+  jobapplication.JobApplicationStatus:
+    enum:
+    - APPLICATION_ACCEPTED
+    - APPLICATION_REJECTED
+    - ASSESSMENT_IN_PROGRESS
+    - OFFER_REJECTED
+    - OFFER_ACCEPTED
+    - OFFER_EXTENDED
+    - CANCELLED
+    type: string
+    x-enum-varnames:
+    - JobApplicationStatusApplicationAccepted
+    - JobApplicationStatusApplicationRejected
+    - JobApplicationStatusAssessmentInProgress
+    - JobApplicationStatusOfferRejected
+    - JobApplicationStatusOfferAccepted
+    - JobApplicationStatusOfferExtended
+    - JobApplicationStatusCancelled
+  jobapplication.UpdateJobApplicationStatusRequest:
+    properties:
+      status:
+        description: '@Enum(APPLICATION_ACCEPTED, APPLICATION_REJECTED, ASSESSMENT_IN_PROGRESS,
+          OFFER_REJECTED, OFFER_ACCEPTED, OFFER_EXTENDED, CANCELLED)'
         type: string
     type: object
   request.Breakup:
@@ -2453,6 +2525,58 @@ paths:
           schema:
             type: string
       summary: Initialize job application
+  /job-application/{id}/status:
+    post:
+      consumes:
+      - application/json
+      description: Update a job application's status
+      parameters:
+      - description: Job Application ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/jobapplication.UpdateJobApplicationStatusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update job application status
+  /job/{id}/applications:
+    get:
+      consumes:
+      - application/json
+      description: Get job applications
+      parameters:
+      - description: Job ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/job.GetJobApplicationsResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get job applications
   /job/create:
     post:
       consumes:
